Move sw5lib functionality to own repo